# ml_learning

./: .gitignore  shell.nix
comp_ds/: .gitignore  baseline.xopp
comp_ds/notebooks/: main.ipynb  module4.ipynb
competitions/california housing/: california.ipynb
competitions/horse_health/: devenv.nix  pyproject.toml
competitions/horse_health/data/: test.csv  train.csv
competitions/horse_health/notebooks/: horse-health.ipynb  models.ipynb
competitions/horse_health/notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
competitions/horse_health/notebooks/catboost_info/learn/: events.out.tfevents
competitions/horse_health/notebooks/catboost_info/test/: events.out.tfevents
competitions/horse_health/notebooks/catboost_info/tmp/: cat_feature_index.67a909ba-1dd56b3-f781c546-71067e5a.tmp  cat_feature_index.8874eabb-7b00ed-24e7264a-9d59e5c2.tmp  cat_feature_index.9f805a1-114530e0-74aeb242-154285df.tmp  cat_feature_index.d6dbfb18-871c712e-7649572a-b6b81c9.tmp  cat_feature_index.f74aab42-a1198f3b-92f6d156-7473105e.tmp
competitions/horse_health/subs/: first_stacking.csv
credits/: credit.ipynb  credit_baseline.ipynb  my_submission.csv  plans.md
earth quake/: main.ipynb
keras learning/: Untitled0.ipynb  Untitled3.ipynb  my_model.data-00000-of-00001  my_model.index  test_model.data-00000-of-00001  test_model.index
pytorch_learning/: .gitignore  p1_c4.ipynb  p1_ch2.ipynb  p2.ipynb
titanic/: main.ipynb
torch learning/: 00_pytorch_fundamentals.ipynb  01_pytorch_workflow.ipynb  main.ipynb
(+50 files in other folders)
