[tool.poetry]
name = "Machine Learning environment"
version = "0.1.0"
description = ""
authors = ["Cosheimil <a.varvus@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
numpy = "1.25.0"
pandas = "^2.1.1"
polars = "^0.19.3"
matplotlib = "^3.8.0"
ipykernel = "^6.25.2"
jupyter = "^1.0.0"
deep-translator = "^1.11.4"
spacy = "^3.6.1"
numba = "^0.58.0"
torch = { url = "https://download.pytorch.org/whl/rocm5.4.2/torch-2.0.1%2Brocm5.4.2-cp310-cp310-linux_x86_64.whl" } # Replace it if u dont use ROCm
torchvision = { url = "https://download.pytorch.org/whl/rocm5.4.2/torchvision-0.15.2%2Brocm5.4.2-cp310-cp310-linux_x86_64.whl" } # Replace it if u dont use ROCm
torchaudio = { url = "https://download.pytorch.org/whl/rocm5.4.2/torchaudio-2.0.2%2Brocm5.4.2-cp310-cp310-linux_x86_64.whl"} # Replace it if u dont use ROCm
transformers = "^4.33.2"
scikit-learn = "^1.3.1"
sacremoses = "^0.0.53"
sentencepiece = "^0.1.99"
catboost = "^1.2.2"
xgboost = "^2.0.0"
lightgbm = "^4.1.0"
optuna = "^3.3.0"
kaggle = "^1.5.16"

[tool.poetry.group.dev.dependencies]
notebook = "^7.0.4"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
